# bot-firmware

./: .gitignore  CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.defaults
components/battery_monitor/: CMakeLists.txt  battery_monitor.cpp
components/battery_monitor/include/: battery_monitor.h
components/ds3231_rtc/: CMakeLists.txt  ds3231_rtc.cpp
components/ds3231_rtc/include/: ds3231_rtc.h
components/line_sensors/: CMakeLists.txt  line_sensors.cpp
components/line_sensors/include/: line_sensors.h
components/line_sensors/test/: CMakeLists.txt  test_sensors.cpp
components/mpu6050_imu/: CMakeLists.txt  mpu6050_imu.cpp
components/mpu6050_imu/include/: mpu6050_imu.h
components/pid_controller/: CMakeLists.txt  pid_controller.cpp
components/pid_controller/include/: pid_controller.h
components/robot_motors/: CMakeLists.txt  robot_motors.cpp
components/robot_motors/include/: robot_motors.h
components/robot_motors/test/: CMakeLists.txt  test_motors.cpp
components/system_monitor/: CMakeLists.txt  font8x8.h  system_monitor.cpp
components/system_monitor/include/: system_monitor.h
main/: CMakeLists.txt  bot-firmware.cpp  idf_component.yml  robot_config.h  robot_display.cpp  robot_display.h  user_logic.h
